# Task-Track

./: .gitignore  README.md  prueba.py  prueba1.py  pyproject.toml  readme.md  task_Tracker_CLI.py  tasks.json  tasks_test.json  tests.py
src/task_tracker_cli/: cli.py
task_tracker_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: tests.py
